# moviepy-1.0.4

./: Pipfile  pyproject.toml  setup.py
moviepy/video/: VideoClip.py
moviepy/video/compositing/: CompositeVideoClip.py
tests/: test_issues.py
