[tool.poetry]
name = "moviepy"
version = "1.0.4"
authors = ["Zulko 2017 <noreply@example.org>"]  # Poetry hard-requires an Author with an email... I guess this is okay?
description = "Video editing with Python"
package-mode = true
readme = "README.rst"
homepage = "https://zulko.github.io/moviepy/"
license = "MIT License"
keywords = ["video editing", "audio compositing", "ffmpeg"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Multimedia :: Video",
    "Topic :: Multimedia :: Video :: Capture",
    "Topic :: Multimedia :: Video :: Conversion",
]

[tool.poetry.dependencies]
python = ">=3.12"

decorator = "5.1.1"
imageio = ">=2.5,<3.0"
imageio_ffmpeg = ">=0.2.0"
tqdm = ">=4.11.2,<5.0"
numpy = "1.26.4"
requests = ">=2.8.1,<3.0"
proglog = "<=1.0.0"

opencv-python = {version = "4.10.0.84", optional = true}
scikit-image = {version = "0.24.0", optional = true}
scikit-learn = {version = "1.5.1", optional = true}
scipy = {version = "1.14.0", optional = true}
matplotlib = {version = "3.9.1", optional = true}
youtube_dl = {version = "*", optional = true}

numpydoc = {version = "1.7.0", optional = true}
sphinx_rtd_theme = {version = ">=0.1.10b0,<1.0", optional = true}
sphinx = {version = "8.0.2", optional = true}

coverage = {version = "7.6.0", optional = true}
pytest-cov = {version = "5.0.0", optional = true}
pytest = {version = "8.3.2", optional = true}

[tool.poetry.extras]
extras = ["opencv-python", "scikit-image", "scikit-learn", "scipy", "matplotlib", "youtube_dl"]
docs = ["pygame", "numpydoc", "sphinx_rtd_theme", "sphinx"]
test = ["coverage", "coveralls", "pytest-cov", "pytest"]

[build-system]
requires = ["poetry>=1.8"]
build-backend = "poetry.masonry.api"
